manifests/eks-alb-manifests/alb-ingressClass.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: my-aws-ingress-class
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: ingress.k8s.aws/alb
  # Optional:  Define other parameters for the controller (e.g., subnets, security groups)
